# ros2_learn

chapt2/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  ros2_cpp_node  ros2_cpp_node.cpp  ros2_python_node.py
chapt2/ament_cmake_core/: chapt2Config.cmake  package.cmake
chapt2/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
chapt2/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
chapt2/chapt_ws/: novel1.txt  novel2.txt
chapt2/chapt_ws/install/: local_setup.sh  setup.sh
chapt2/chapt_ws/install/demo_cpp_pkg/lib/demo_cpp_pkg/: cpp_node
chapt2/chapt_ws/install/demo_cpp_pkg/share/demo_cpp_pkg/: local_setup.sh  package.sh
chapt2/chapt_ws/install/demo_python_pkg/share/demo_python_pkg/: package.sh  package.xml
chapt2/chapt_ws/log/: latest_build
chapt2/chapt_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
chapt2/chapt_ws/src/demo_cpp_pkg/src/: cpp_node.cpp
chapt2/chapt_ws/src/demo_python_pkg/: setup.py
chapt2/chapt_ws/src/demo_python_pkg/demo_python_pkg/: writer_node.py
chapt2/demo_python_pkg/: package.xml  setup.py
chapt2/install/: local_setup.sh  setup.sh
chapt2/install/demo_python_pkg/share/demo_python_pkg/: package.sh
chapt2/log/: latest_build
chapt3/src/demo_cpp_topic/: CMakeLists.txt  package.xml
chapt3/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
chapt3/src/topic_practice_ws/src/status_display/: CMakeLists.txt
chapt3/src/topic_practice_ws/src/status_display/src/: hello_qt.cpp
chapt3/src/topic_practice_ws/src/status_display_py/status_display_py/: sys_status_display.py
chapt3/src/topic_practice_ws/src/status_interfaces/: package.xml
chapt3/src/topic_practice_ws/src/status_interfaces/msg/: SystemStatus.msg
chapt3/src/topic_practice_ws/src/status_publisher/status_publisher/: sys_status_pub.py
chapt3/src/topic_ws/: novel1.txt
chapt3/src/topic_ws/src/demo_python_topic/: package.xml
chapt3/src/topic_ws/src/demo_python_topic/demo_python_topic/: novel_pub_node.py
chapt3/topic_practice_ws/src/status_display/: CMakeLists.txt  package.xml
chapt3/topic_practice_ws/src/status_display/src/: sys_status_display.cpp
chapt3/topic_practice_ws/src/status_display_py/: package.xml  setup.cfg  setup.py
chapt3/topic_practice_ws/src/status_interfaces/: CMakeLists.txt
chapt3/topic_practice_ws/src/status_publisher/: package.xml  setup.py
chapt3/topic_ws/src/demo_python_topic/: setup.py
chapt3/topic_ws/src/demo_python_topic/demo_python_topic/: novel_sub_node.py
chapt4/src/: 心得.md
chapt4/src/chapt4_interfaces/: CMakeLists.txt  package.xml
chapt4/src/chapt4_interfaces/srv/: FaceDetector.srv  Patrol.srv
chapt4/src/demo_cpp_service/: CMakeLists.txt  package.xml
chapt4/src/demo_cpp_service/src/: turtle_control.cpp
chapt4/src/demo_python_service/: package.xml  setup.py
chapt4/src/demo_python_service/demo_python_service/: face_detect_client_node.py  face_detect_node.py  learn_face_detect.py
