<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>status_interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bei06081221@gmail.com">bei</maintainer>
  <license>Apache-2.0</license>
  <!-- 添加声明 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 使用其时间接口 time 记录信息时间 -->
  <depend>builtin_interfaces</depend>
  <!-- 将自定义消息文件转换为C++、Python等语言的接口 -->
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
